[package]
name = "wasm-echarts"
version = "0.1.0"
authors = ["shenjunjian <40288193@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = [
    "console_error_panic_hook",
    "chart-line",
    "chart-bar",
    "chart-pie",
    "chart-scatter",
]
chart-line = []
chart-bar = []
chart-pie = []
chart-scatter = []

[dependencies]
wasm-zrender = { path = "../wasm-zrender" }
wasm-bindgen = "0.2.125"
js-sys = "0.3.102"
indexmap = "2"
web-sys = { version = "0.3.102", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Response",
    "Window",
] }

console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.75"
