[package]
name = "wasm-zrender"
version = "0.1.0"
edition = "2021"
description = "wasm-bindgen 薄封装，浏览器侧暴露对齐 zrender export.ts 的 init/Group/Rect API"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
rust-zrender = { path = "../rust-zrender" }
wasm-bindgen = "0.2.125"
js-sys = "0.3.102"
web-sys = { version = "0.3.102", features = [
    "CanvasRenderingContext2d",
    "Document",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "ImageData",
    "Window",
] }

console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.75"
